# openrave-yarp-plugins

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  ForceSensor_8h_source.html  ISimulation_8hpp_source.html  OpenravePlugins_2OpenraveYarpPlanner_2LogComponent_8hpp_source.html  OpenravePlugins_2OpenraveYarpPluginLoader_2LogComponent_8hpp_source.html  OpenravePlugins_2OpenraveYarpWorld_2LogComponent_8hpp_source.html  OpenraveYarpPlanner_8hpp_source.html  OpenraveYarpPluginLoaderClient_8hpp_source.html  OpenraveYarpPluginLoader_8hpp_source.html  OpenraveYarpWorldClientFile_8hpp_source.html  OpenraveYarpWorldClientMesh_8hpp_source.html  OpenraveYarpWorld_8hpp_source.html  OypPortReader_8hpp_source.html  OyplPeriodicWrite_8hpp_source.html  OyplPortReader_8hpp_source.html  OywPeriodicWrite_8hpp_source.html  OywPortReader_8hpp_source.html  README.md  YarpOpenraveAnalogSensors_8hpp_source.html  YarpOpenraveBase_8hpp_source.html  YarpOpenraveControlBoard_8hpp_source.html  YarpOpenraveControlboard_8hpp_source.html  YarpOpenraveGrabber_8hpp_source.html  YarpOpenraveMeshFromRealDepth_8hpp_source.html  YarpOpenraveRGBDSensor_8hpp_source.html  YarpOpenraveRobotManager_8hpp_source.html  YarpOpenraveSimulation_8hpp_source.html  YarpPlugins_2YarpOpenraveAnalogSensors_2LogComponent_8hpp_source.html  YarpPlugins_2YarpOpenraveControlBoard_2LogComponent_8hpp_source.html  YarpPlugins_2YarpOpenraveGrabber_2LogComponent_8hpp_source.html  YarpPlugins_2YarpOpenraveMeshFromRealDepth_2LogComponent_8hpp_source.html  YarpPlugins_2YarpOpenraveRGBDSensor_2LogComponent_8hpp_source.html  YarpPlugins_2YarpOpenraveRobotManager_2LogComponent_8hpp_source.html  YarpPlugins_2YarpOpenraveSimulation_2LogComponent_8hpp_source.html  annotated.html  classDataProcessor-members.html  classDataProcessor.html  (+170 more)
bindings/: CMakeLists.txt  roboticslab_openrave_yarp_plugins.i
bindings/python/: CMakeLists.txt
examples/cpp/robotDraw/: CMakeLists.txt  main.cpp
libraries/OpenravePlugins/: CMakeLists.txt
libraries/OpenravePlugins/OpenraveCollisionStop/: CMakeLists.txt  OpenraveCollisionStop.cpp
libraries/OpenravePlugins/OpenraveDumpManipulatorJointLinks/: CMakeLists.txt  OpenraveDumpManipulatorJointLinks.cpp  README.md
libraries/OpenravePlugins/OpenraveForceSensor/: CMakeLists.txt  ForceSensor.cpp  ForceSensor.h  ForceSensorMain.cpp
libraries/OpenravePlugins/OpenraveWorldRpcResponder/: CMakeLists.txt
libraries/OpenravePlugins/OpenraveYarpControlboard/: OpenraveYarpControlboard.cpp
libraries/OpenravePlugins/OpenraveYarpCoupled/: CMakeLists.txt  OpenraveYarpCoupled.cpp
libraries/OpenravePlugins/OpenraveYarpForce/: CMakeLists.txt
libraries/OpenravePlugins/OpenraveYarpForceEstimator/: CMakeLists.txt  OpenraveYarpForceEstimator.cpp
libraries/OpenravePlugins/OpenraveYarpIroning/: CMakeLists.txt  OpenraveYarpIroning.cpp
libraries/OpenravePlugins/OpenraveYarpPaintSquares/: CMakeLists.txt  OpenraveYarpPaintSquares.cpp
libraries/OpenravePlugins/OpenraveYarpPlanner/: CMakeLists.txt  LogComponent.cpp  LogComponent.hpp  OpenraveYarpPlanner.cpp  OpenraveYarpPlanner.hpp  OypPortReader.cpp  OypPortReader.hpp  README.md
libraries/OpenravePlugins/OpenraveYarpPluginLoader/: CMakeLists.txt  LogComponent.cpp  LogComponent.hpp  OpenPortPeriodicWrite.cpp  OpenPortPeriodicWrite.hpp  OpenPortReader.cpp  OpenPortReader.hpp  OpenraveYarpPluginLoader.cpp  OpenraveYarpPluginLoader.hpp  OyplPeriodicWrite.cpp  OyplPeriodicWrite.hpp  OyplPortReader.cpp  OyplPortReader.hpp  README.md
libraries/OpenravePlugins/OpenraveYarpWorld/: CMakeLists.txt  LogComponent.cpp  LogComponent.hpp  OpenraveYarpWorld.cpp  OpenraveYarpWorld.hpp  OpenraveYarpWorldRpcResponder.cpp  OywPeriodicWrite.cpp  OywPeriodicWrite.hpp  OywPortReader.cpp  OywPortReader.hpp  README.md
libraries/OpenravePlugins/OpenraveYarpWorldRpcResponder/: CMakeLists.txt  OpenraveYarpWorldRpcResponder.cpp  OpenraveYarpWorldRpcResponder.hpp  README.md  (+2 more)
libraries/YarpOpenraveBase/: CMakeLists.txt  YarpOpenraveBase.cpp  YarpOpenraveBase.hpp
libraries/YarpPlugins/: CMakeLists.txt  ISimulation.hpp
programs/openraveYarpPluginLoaderClient/: CMakeLists.txt  OpenraveYarpPluginLoaderClient.cpp  OpenraveYarpPluginLoaderClient.hpp  README.md  main.cpp
programs/openraveYarpWorldClient/: CMakeLists.txt  OpenraveYarpWorldClient.cpp  OpenraveYarpWorldClient.hpp  README.md  main.cpp
programs/openraveYarpWorldClientFile/: CMakeLists.txt  OpenraveYarpWorldClientFile.cpp  OpenraveYarpWorldClientFile.hpp  README.md  main.cpp
programs/openraveYarpWorldClientMesh/: CMakeLists.txt  OpenraveYarpWorldClientMesh.cpp  OpenraveYarpWorldClientMesh.hpp  README.md  main.cpp
share/: CMakeLists.txt
share/openrave/: physicsRobot.env.xml
share/teoSim/: CMakeLists.txt
share/teoSimBase/: CMakeLists.txt
yarpplugins/: CMakeLists.txt
yarpplugins/FakeControlboard/: CMakeLists.txt  DeviceDriverImpl.cpp  FakeControlboard.hpp  IControlLimitsImpl.cpp  IControlModeImpl.cpp  IPositionImpl.cpp  ITorqueImpl.cpp  IVelocityImpl.cpp
yarpplugins/OpenraveControlboard/: CMakeLists.txt  DeviceDriverImpl.cpp  FakeControlboardOR.hpp  IControlLimitsImpl.cpp  IControlModeImpl.cpp  IEncodersImpl.cpp  IEncodersTimedImpl.cpp  IPosition2Impl.cpp  IPositionImpl.cpp  ITorqueImpl.cpp  IVelocity2Impl.cpp  IVelocityImpl.cpp  OpenraveControlboard.hpp  RateThreadImpl.cpp  SharedArea.cpp
yarpplugins/YarpOpenraveControlboard/: CMakeLists.txt  DeviceDriverImpl.cpp  IControlLimits2Impl.cpp  IControlLimitsImpl.cpp  IControlMode2Impl.cpp  IControlModeImpl.cpp  IEncodersImpl.cpp  IEncodersTimedImpl.cpp  IPosition2Impl.cpp  IPositionImpl.cpp  ITorqueImpl.cpp  IVelocity2Impl.cpp  IVelocityImpl.cpp  YarpOpenraveControlboard.hpp  YarpOpenraveControlboard.ini
yarpplugins/YarpOpenraveControlboardCollision/: CMakeLists.txt  DeviceDriverImpl.cpp  IControlLimits2Impl.cpp  IControlLimitsImpl.cpp  IControlModeImpl.cpp  IEncodersImpl.cpp  IEncodersTimedImpl.cpp  IPosition2Impl.cpp  IPositionImpl.cpp  ITorqueImpl.cpp  IVelocity2Impl.cpp  IVelocityImpl.cpp  YarpOpenraveControlboardCollision.hpp  YarpOpenraveControlboardCollision.ini
(+285 files in other folders)
