#Copyright: (C) 2016 Universidad Carlos III de Madrid
# Author: Juan G. Victores, Raul Fernandez-Fernandez, Raul de Santos Rico
# CopyPolicy: Released under the terms of the LGPLv2.1 or later, see LGPL.TXT

add_subdirectory(OpenraveForceSensor)
add_subdirectory(OpenraveYarpForceEstimator)
add_subdirectory(OpenraveYarpPaintSquares)
add_subdirectory(OpenraveYarpPlanner)
add_subdirectory(OpenraveYarpPluginLoader)
add_subdirectory(OpenraveYarpWorld)
